2001-03-29  Bruno Haible  <haible@clisp.cons.org>

	* gettext-0.10.36 released.

2001-03-21  Bruno Haible  <haible@clisp.cons.org>

	* linebreak.c: Include string.h, needed for memset() declaration.

2001-03-11  Bruno Haible  <haible@clisp.cons.org>

	* xmalloc.c (fixup_null_alloc): Unify messages.

2001-03-10  Bruno Haible  <haible@clisp.cons.org>

	* linebreak.c (iconv_string_length): Don't call
	iconv(cd,NULL,NULL,NULL,NULL) on glibc-2.1; it crashes.

	* localcharset.c (locale_charset): Allow wildcard syntax. Resolve
	alias also if codeset is empty.
	* config.charset (BeOS): Use wildcard syntax.

2001-03-09  Bruno Haible  <haible@clisp.cons.org>

	* config.charset: Update from libiconv-1.6.
	* localcharset.c: Likewise.

2001-03-04  Bruno Haible  <haible@clisp.cons.org>

	* system.h (ISSLASH, HAS_DEVICE, IS_ABSOLUTE_PATH, IS_PATH_WITH_DIR,
	FILESYSTEM_PREFIX_LEN): New macros.
	(concatenated_pathname): New declaration.
	(SET_BINARY): New macro.
	* concatpath.c: New file.
	* Makefile.am (libnlsut_a_SOURCES): Add concatpath.c.

2001-03-03  Bruno Haible  <haible@clisp.cons.org>

	* gen-lbrkprop.c: New file.
	* 3level.h: New file.
	* lbrkprop.h: New file, generated by gen-lbrkprop.
	* linebreak.h: New file.
	* linebreak.c: New file.
	* Makefile.am (EXTRA_DIST): Add gen-lbrkprop.c, 3level.h.
	(libnlsut_a_SOURCES): Add linebreak.c.
	(noinst_HEADERS): Add linebreak.h, lbrkprop.h.

	* c-ctype.h: New file.
	* c-ctype.c: New file.
	* Makefile.am (libnlsut_a_SOURCES): Add c-ctype.c.
	(noinst_HEADERS): Add c-ctype.h.

	Allow the use of locale_charset() in src.
	* config.charset: New file, from ../intl/.
	* localcharset.c: New file, from ../intl/.
	* ref-add.sin: New file, from ../intl/.
	* ref-del.sin: New file, from ../intl/.
	* Makefile.am (EXTRA_DIST): Add config.charset, ref-{add,del}.sin.
	(libnlsut_a_SOURCES): Add localcharset.c.
	(DEFS): Define to set LIBDIR.
	(INCLUDES): Add -I. -I$(srcdir) -I.. to compensate for automake's
	default DEFS setting.