@@ -1,3 +1,8 @@
+2001-04-04  Bruno Haible  <haible@clisp.cons.org>
+
+	* write-po.c (wrap): Prohibit line breaks inside backslash escape
+	sequences.
+
 2001-03-29  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext-0.10.36 released.
